# dev-team

./: .env.example  .gitignore  README.md  REQUIREMENTS.md  agent_config.yaml  chat_history.db  main.py  pyproject.toml  requirements.txt  start_server.sh
app/: chat_memory.py  config.py  logging_config.py  main.py
app/agents/: __init__.py  ba.py  config.py  developer.py  manager.py  team.py  test_runner.py  tester.py  workers.py
app/db/: __init__.py  database.py  models.py
app/middleware/: __init__.py  error_handler.py  request_logger.py
app/models/: __init__.py  schemas.py  state.py
app/routers/: __init__.py  ba.py  chat.py  dev.py  sessions.py  team.py  tester.py
app/tools/: __init__.py  ba_tools.py  file_tools.py
app/utils/: __init__.py  llm_logger.py
docs/: openrouter_api.json
tests/: __init__.py  test_ba.py
