[project]
name = "dev-team"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.24.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.13",
    "openai>=0.28.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.1.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings",
    "pydantic>=2.0",
    "typing-extensions>=4.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.1.0",
    "jsonpointer>=2.0",
    "PyYAML>=6.0",
    "sqlmodel>=0.0.15",
    "alembic>=1.13.0",
    "langgraph>=0.1.0",
    "asyncpg>=0.29.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "fastapi-utils>=0.7.0",
]
